Adjust some styles to adapt to ebp style.

--- a/app/src/designer/designer.scss
+++ b/app/src/designer/designer.scss
@@ -814,6 +814,7 @@
 
 .report-designer, .report-preview, .report-preview-actions {
   .btn {
+    border: none;
     border-radius: 0;
     padding: 8px 30px;
     margin: 10px 1px;
