--- a/app/src/designer/templates/preview.tpl.html
+++ b/app/src/designer/templates/preview.tpl.html
@@ -8,22 +8,25 @@
                 <button class="btn btn-info">导出</button>
             </span>
         </div>
-        <form class="report-filter-form form-horizontal" ng-if="$report.filterFields.length > 0">
+        <form name="filterForm" class="report-filter-form form-horizontal" ng-if="$report.filterFields.length > 0">
             <div class="col-md-6" ng-repeat="field in $report.filterFields">
                 <div class="form-group">
                     <label for="field-input-{{field.seqId}}" class="col-sm-4 control-label">
                         {{field.dataSrcItemLabel}}:
                     </label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" id="field-input-{{field.seqId}}" ng-if="field.dataSrcItemType === 'text'">
-                        <select class="form-control" id="field-input-{{field.seqId}}" ng-if="field.dataSrcItemType === 'select'">
-                            <option>选项1</option>
-                            <option>选项2</option>
-                            <option>选项3</option>
-                            <option>选项4</option>
+                        <input type="text" ng-model="filterParams[field.dataSrcItemName]" name="{{field.dataSrcItemName}}" class="form-control" id="field-input-{{field.seqId}}" ng-if="field.inputType === 'text'">
+                        <select class="form-control" ng-model="filterParams[field.dataSrcItemName]" name="{{field.dataSrcItemName}}" id="field-input-{{field.seqId}}" ng-if="field.inputType === 'select'">
+                            <option value="">请选择</option>
+                            <option value="{{o.name}}" ng-repeat="o in getOptionData(field.seqId)">{{o.name}}</option>
                         </select>
                     </div>
                 </div>
+            </div>
+            <div class="col-md-12">
+                <button ng-click="refreshReport()" class="btn btn-success pull-right">
+                    <i class="fa fa-search"></i>查询
+                </button>
             </div>
         </form>
         <div class="report-body">
@@ -33,7 +36,7 @@
                         <div class="row-content">
                             <div class="report-col col-xs-{{col.size || 12}}" ng-repeat="col in row.cols">
                                 <div class="col-content">
-                                    <div ebp-report-widget="$report.getWidget(col.content.id)"></div>
+                                    <div ebp-report-widget="getWidget(col.content.id)" report="$report"></div>
                                 </div>
                             </div>
                         </div>
@@ -44,7 +47,7 @@
     </div>
 </div>
 <div class="report-preview-actions">
-    <button ng-click="$preview.close()" class="btn btn-sup btn-danger">
+    <button ng-click="$preview.close()" class="btn btn-sup btn-material-pink">
         <i class="fa fa-close"></i>
         关闭
     </button>
