--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -108,7 +108,7 @@ body {
   position: relative;
   line-height: 64px;
   padding: 0 16px;
-  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 0px 2px 2px rgba(0, 0, 0, 0.098), 0px 0px 5px 1px rgba(0, 0, 0, 0.084);
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.14), 0 0 2px 2px rgba(0, 0, 0, 0.098), 0px 0px 5px 1px rgba(0, 0, 0, 0.084);
   z-index: 3;
   background: #f6f6f6;
   color: #202020;
